fixed margin on content so it won't overlap with menu. Hid database field translation menu items as they're now becoming obsolete.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -126,7 +126,7 @@ body {
 }
 
 div#content {
-  margin-left: 250px;
+  margin-left: 260px;
 	padding: 10px;
 	background-color: #ffffff;
 }
